@@ -13,6 +13,7 @@ Version 1.4.1
 * Add zerocorr -- a zero baseline cross correlator
 * Add sigint catching to several utils
 * Improve string (mostly filename) handling safety with snprintf
+* Allow read from stdin (at least in some circumstances) via filename = "-"
 * Version for DiFX-2.0.0
 
 Version 1.4.0
